# chemical-abstract-machine

./: Abstract-Chemical-Machine.cabal  Abstract-Chemical-Machine.nix  LICENSE  Release.nix  readme.md
agda/: Language.agda  Language.agdai
agda/Cham/: Agent.agda  Agent.agdai  Context.agda  Context.agdai  Inference.agda  Inference.agdai  Label.agda  Label.agdai  Molecule.agda  Molecule.agdai  Name.agda  Name.agdai  Transitions.agda  Transitions.agdai
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.0.20200123/: Abstract-Chemical-Machine-1.0.0-inplace-ACM.conf  package.cache
lib/Control/Cham/: Agent.hs  Context.hs  Interpreter.hs  Label.hs  Molecule.hs  Name.hs
nix/: readme.md
org/: Syntax.org  readme.md  γ-calculus.org
test/: Test.hs
